--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  device_info: ^0.4.0+1
+  http: ^0.13.3
+  firebase_core: ^1.0.1
+  cloud_firestore: ^1.0.1
+  provider: ^5.0.0
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_test:
@@ -60,17 +66,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Shippori Mincho
+      fonts:
+        - asset: assets/fonts/Shippori_Mincho/ShipporiMincho-Regular.ttf
+        - asset: assets/fonts/Shippori_Mincho/ShipporiMincho-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Shippori_Mincho/ShipporiMincho-Bold.ttf
+          weight: 700
+    - family: Noto Sans JP
+      fonts:
+        - asset: assets/fonts/Noto_Sans_JP/NotoSansJp-Regular.otf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
