--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  device_info: ^0.4.0+1
+  device_info: ^2.0.2
   http: ^0.13.3
   firebase_core: ^1.0.1
-  cloud_firestore: ^1.0.1
+  cloud_firestore: ^2.4.0
   provider: ^5.0.0
   rxdart: ^0.27.1
+  uuid: ^3.0.4
+  intl: ^0.17.0
+  firebase_auth: ^3.0.1
+  google_sign_in: ^5.0.7
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.5.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
