--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^5.0.7
   flutter_signin_button: ^2.0.0
   flutter_launcher_icons: ^0.9.2
+  flutter_slidable: ^0.6.0
 
 dev_dependencies:
   flutter_test:
